# mcp-safeshell

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  inspector-config.example.json  safeshell.example.toml
.github/workflows/: ci.yml  cross-compile.yml  release.yml
docs/: brainstorm.md
examples/: README.md  claude-code-http-mcp.json  claude-desktop-custom-config.json  vscode-mcp.json  windsurf-mcp.json
src/: config.rs  main.rs  sanitizer.rs  server.rs  shutdown.rs
src/pipeline/: classifier.rs  location_guard.rs  logging.rs  mod.rs  parser.rs  permission_gate.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
